client/src/pages/inbox/Inbox.css
@import "../placeholder.css";

.inbox
{
 background-color: grey;
}

.conversation
{
    transition: all .1s ease-in-out;
    background-color: lightgrey;
    border-radius: 10px;
    padding: 10px;
    margin: 15px;
    cursor: pointer;
}

.conversation:hover, .open-conversation:hover
{
    transform: scale(1.05);
}

.open-conversation
{
    transition: all .1s ease-in-out;
    background-color: bisque;
    border-radius: 10px;
    padding: 10px;
    margin: 15px;
    cursor: pointer;
}

.compose-message
{
    float: left;
    background-color: white;
    margin: 10px;
    width: 25%;
    height: 50px;
    border-radius: 10px;
}

.compose-button
{
    width: 100%;
    height: 50px;
    border-radius: 10px;
}

.participents
{
    float: left;
    background-color: white;
    margin: 10px;
    width: 65%;
    height: 50px;
    border-radius: 10px;
    text-align: center;
}

.conversations
{
    clear: left;
    float: left;
    background-color: white;
    margin: 10px;
    width: 25%;
    height: 680px;
    border-radius: 10px;
    overflow: scroll;
}

.chat-box
{
    float: left;
    background-color: white;
    padding: 10px;
    margin: 10px;
    width: 65%;
    border-radius: 10px;
    height: 600px;
    overflow: scroll;
}

.my-message
{
    float: right;
    padding: 10px;
    margin: 5px;
    margin-left: 300px;
    margin-right: 30px;
    border-radius: 20px;
    background-color: lightgrey;
}




.other-message-bubble
{
    float: left;
    padding: 10px;
    margin: 5px;
    margin-right: 300px;
    margin-left: 30px;
    border-radius: 20px;
    background-color: lightblue;
    max-width: 50%;

}

.text-box
{
    display: block;
    padding: 10px;
    margin: 10px;
    border-radius: 20px;
    float: left;
}

.textField
{
    width: 400px;
    line-height: 28px;
}

.message-bubble-name-tag
{
    float: left;
    color: grey;
    font-size: 6pt;
    margin-bottom: 8px;
    padding-left: 50px;
    margin-top: -5px;
    width: 100%;
}

.user-select-form
{
    margin-left: 200px;
}

.user-select
{
    box-sizing: content-box;
    -webkit-appearance: menulist-button;
    height: 10px;
    width: 200px;
    overflow: hidden;
    z-index: 10;
}

